Tests/compiling_error.txt
C:\Users\Familia\Documents\GitHub\CDataStructures\Tests\UtilitiesTest.c:1:29: fatal error: Utils/utilities.h: No such file or directory
 #include "Utils/utilities.h"
                             ^
compilation terminated.
